# GameEngineFromScratch

./: .gitignore  CmakeLists.txt
Game/: CMakeLists.txt  config.h.in
Game/include/: config.h
Game/include/VFX/: Explosion.h
Game/include/enemy/: EnemySpaceship.h  Vanguard.h
Game/include/game_framework/: GameApplication.h
Game/include/gameplay/: HealthComponent.h
Game/include/player/: PlayerSpaceship.h
Game/include/spaceship/: Spaceship.h
Game/include/weapon/: Bullet.h  BulletShooter.h  Shooter.h
Game/player/: PlayerSpaceship.cpp  PlayerSpaceship.h
Game/src/VFX/: Explosion.cpp
Game/src/enemy/: EnemySpaceship.cpp  Vanguard.cpp
Game/src/game_framework/: GameApplication.cpp
Game/src/gameplay/: HealthComponent.cpp
Game/src/player/: PlayerSpaceship.cpp
Game/src/spaceship/: Spaceship.cpp
Game/src/weapon/: Bullet.cpp  BulletShooter.cpp  Shooter.cpp
GameEngineFromScratch/: CMakeLists.txt
GameEngineFromScratch/include/: EntryPoint.h
GameEngineFromScratch/include/VFX/: Particle.h
GameEngineFromScratch/include/framework/: Actor.h  Application.h  AssetManager.h  Core.h  Delegate.h  MathUtility.h  Object.h  Physics.h  World.h
GameEngineFromScratch/src/: EntryPoint.cpp  main.cpp
GameEngineFromScratch/src/VFX/: Particle.cpp
GameEngineFromScratch/src/framework/: Actor.cpp  Application.cpp  AssetManager.cpp  Delegate.cpp  MathUtility.cpp  Object.cpp  Physics.cpp  World.cpp
